[gd_scene load_steps=16 format=3 uid="uid://cacrsub4xm8ki"]

[ext_resource type="Script" path="res://scripts/map_canvas.gd" id="1_n0epv"]
[ext_resource type="Texture2D" uid="uid://bv5r080c1hd4u" path="res://assets/sprites/map.png" id="2_nropq"]
[ext_resource type="Texture2D" uid="uid://cdnm25ttywahy" path="res://assets/sprites/stormbreaker.png" id="3_o5yil"]
[ext_resource type="Texture2D" uid="uid://cphkqcdtn5mj8" path="res://assets/sprites/stormbreaker_hover.png" id="4_4y2ru"]
[ext_resource type="Texture2D" uid="uid://j3ycgv1xem21" path="res://assets/sprites/seawitch.png" id="5_3mepw"]
[ext_resource type="Texture2D" uid="uid://dunea0ai5boay" path="res://assets/sprites/seawitch_hover.png" id="6_k3oow"]
[ext_resource type="Texture2D" uid="uid://rw31pumdurd3" path="res://assets/sprites/bucaneer.png" id="7_dppfy"]
[ext_resource type="Texture2D" uid="uid://dg4247bvr8l51" path="res://assets/sprites/bucaneer_hover.png" id="8_nou16"]
[ext_resource type="Texture2D" uid="uid://ct0j6r0ih36uw" path="res://assets/sprites/deadman.png" id="9_k7214"]
[ext_resource type="Texture2D" uid="uid://ce2thhd5yhspu" path="res://assets/sprites/deadman_hover.png" id="10_dlosl"]
[ext_resource type="AudioStream" uid="uid://yrignwo8a4el" path="res://assets/sounds_and_music/open_map.mp3" id="11_rfh66"]
[ext_resource type="AudioStream" uid="uid://fl1pnmc2tsq2" path="res://assets/sounds_and_music/close_map.mp3" id="12_tyywv"]

[sub_resource type="Animation" id="Animation_481vw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_suf1u"]
resource_name = "see_map"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 720), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ddmwf"]
_data = {
"RESET": SubResource("Animation_481vw"),
"see_map": SubResource("Animation_suf1u")
}

[node name="MapCanvas" type="CanvasLayer"]
visible = false
script = ExtResource("1_n0epv")

[node name="MapTexture" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -330.5
offset_right = 450.0
offset_bottom = 330.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nropq")

[node name="StormbreakerButton" type="TextureButton" parent="."]
offset_left = 331.0
offset_top = 128.0
offset_right = 566.0
offset_bottom = 374.0
texture_normal = ExtResource("3_o5yil")
texture_pressed = ExtResource("3_o5yil")
texture_hover = ExtResource("4_4y2ru")

[node name="SeawitchButton" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -225.0
offset_right = 124.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_3mepw")
texture_pressed = ExtResource("5_3mepw")
texture_hover = ExtResource("6_k3oow")

[node name="BuccaneerButton" type="TextureButton" parent="."]
offset_left = 768.0
offset_top = 176.0
offset_right = 967.0
offset_bottom = 347.0
texture_normal = ExtResource("7_dppfy")
texture_pressed = ExtResource("7_dppfy")
texture_hover = ExtResource("8_nou16")

[node name="DeadmanButton" type="TextureButton" parent="."]
offset_left = 731.0
offset_top = 383.0
offset_right = 918.0
offset_bottom = 534.0
texture_normal = ExtResource("9_k7214")
texture_pressed = ExtResource("9_k7214")
texture_hover = ExtResource("10_dlosl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ddmwf")
}

[node name="OpeningSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_rfh66")

[node name="ClosingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_tyywv")

[connection signal="pressed" from="StormbreakerButton" to="." method="_on_stormbreaker_button_pressed"]
[connection signal="pressed" from="SeawitchButton" to="." method="_on_seawitch_button_pressed"]
[connection signal="pressed" from="BuccaneerButton" to="." method="_on_buccaneer_button_pressed"]
[connection signal="pressed" from="DeadmanButton" to="." method="_on_deadman_button_pressed"]
